--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "root": "build/",
+    "clean_urls": false,
+    "routes": {
+      "/**": "index.html"
+    }
   },
   "devDependencies": {
     "gh-pages": "^1.1.0"
