--- a/package.json
+++ b/package.json
@@ -18,12 +18,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "root": "build/",
-    "clean_urls": false,
-    "routes": {
-      "/**": "index.html"
-    }
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "gh-pages": "^1.1.0"
